--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -56,6 +56,13 @@
   .name-search {
       border: 1px solid lightgray;
   }
+  .name-filter {
+      border: 0;
+  }
+  .name-filter:focus {
+    outline: none !important;
+}
+  
   .input-box {
       background-color: white !important;
       border: 0 !important;
@@ -70,6 +77,7 @@
   }
   .table-heading {
       font-size: 12px;
+      border-top: none !important;
   }
   .emp-role {
       font-size:smaller;
@@ -96,4 +104,13 @@
 .not-avail-color {
     color:red;
     font-weight: 500;
+}
+.search-results-div {
+      padding: 30px;
+      padding-top: 10px;
+      padding-right: 0;
+}
+.search-results-table {
+    overflow: auto;
+    height: 277px;
 }
