row selection changes

--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -118,3 +118,7 @@
     font-size: 13px !important;
     padding: 0 !important;
 }
+.selected-row {
+    border: 1px solid lightgray;
+    -webkit-box-shadow: 2px 2px 2px rgba(0,0,0,0.4);
+}
