--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -122,3 +122,37 @@
     border: 1px solid lightgray;
     -webkit-box-shadow: 2px 2px 2px rgba(0,0,0,0.4);
 }
+.emp-det {
+    padding-top: 10px;
+    font-weight: 500;
+    font-family: inherit;
+    font-size: medium;
+}
+.cont-inf {
+    margin: 0;
+    text-align: center;
+    display: block;
+    width: 100%;
+    font-family: cursive;
+    font-weight: 500;
+}
+.cont-inf-data {
+    margin: 0;
+    text-align: center;
+    display: block;
+    width: 100%;
+    font-family: cursive;
+    font-weight: 500;
+    font-size: 15px;
+    color: grey;
+}
+.social-icon {
+    height: 30px !important;
+    width:30px !important;
+}
+.social-icon-row {
+    text-align: center;
+    padding: 8px;
+    margin: 0;
+    margin-left: 0px !important;
+}
