--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -135,6 +135,7 @@
     width: 100%;
     font-family: cursive;
     font-weight: 500;
+    padding-bottom: 10px;
 }
 .cont-inf-data {
     margin: 0;
@@ -155,4 +156,7 @@
     padding: 8px;
     margin: 0;
     margin-left: 0px !important;
+}
+.info-data {
+    color: #504545;
 }
