--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -16,7 +16,9 @@
     width: 100% !important;
     border-radius: 10px !important;
     height: 97vh;
-    margin-top: 3vh;
+    margin-top: 2vh;
+    position: relative;
+    overflow: hidden;
 }
 .form-layout{
     background-color: #fff;
@@ -109,11 +111,18 @@
       padding: 30px;
       padding-top: 10px;
       padding-right: 0;
+      padding-bottom: 0;
 }
 .search-results-table {
     overflow: auto;
     height: 277px;
 }
+@media only screen and (max-width: 767px) {
+    .search-results-table {
+        overflow: auto;
+        height: 50vh;
+    }
+    }
 .dropdown-alpha {
     font-size: 13px !important;
     padding: 0 !important;
@@ -164,6 +173,8 @@
     padding-top: 80px;
     bottom: 0;
     margin: 0;
+    bottom: 0;
+    position: absolute;
 }
 .profile-btn {
     width: 100%;
@@ -174,4 +185,20 @@
 .hr-div {
     border: 1px solid lightgray;
     width: 100%;
+}
+
+/* .emp-details {
+    height: 85vh;
+} */
+
+@media only screen and (max-width: 767px) {
+.emp-details {
+    display: none;
+}
+}
+
+@media only screen and (min-width: 767px) {
+.view-profile-mobile {
+    display:none;
+}
 }
