--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -116,6 +116,7 @@
 .search-results-table {
     overflow: auto;
     height: 277px;
+    overflow-x: hidden;
 }
 @media only screen and (max-width: 767px) {
     .search-results-table {
@@ -179,8 +180,9 @@
 .profile-btn {
     width: 100%;
     height: 40px;
-    background-color: white;
-   border:0;
+    background-color:#17a2b8;
+    border:0;
+    color:white;
 }
 .hr-div {
     border: 1px solid lightgray;
