--- a/src/css/dashboard.css
+++ b/src/css/dashboard.css
@@ -204,3 +204,23 @@
     display:none;
 }
 }
+
+/* .overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 2;
+    cursor: pointer;
+  } */
+  .full-profile {z-index: 90;
+  position: absolute;
+  background-color: rgba(0,0,0,0.1);
+  height: 100%;
+  width: 100%;
+  }
